# duo-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
duo_cli/: __init__.py  config.py  main.py  output.py
duo_cli/commands/: auth.py  configure.py  info.py  universal.py  users.py
examples/: langchain_agent.py  langchain_agent_universal.py
hooks/: approval-pause.sh  duo-pretooluse.sh  duo-stop.sh  slack-approval.sh  telegram-approval.sh
tests/: test_auth_helpers.py  test_cli.py  test_config.py  test_output.py  test_universal.py
